--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "apexcharts": "^4.5.0",
     "axios": "^1.8.4",
     "cra-template": "1.2.0",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.482.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
