--- a/.env
+++ b/.env
@@ -30,6 +30,7 @@ REACT_APP_GET_CREATE_TRANSACTION_INTERNAL_URL=http://localhost:8080/nusas/store/
 REACT_APP_GET_PUT_PAYMENT_METHODS_INTERNAL_URL=http://localhost:8080/nusas/store/internal/payment/method
 REACT_APP_SSE_ORDER_INTERNAL_URL=http://localhost:8080/nusas/store/internal/order/sse
 REACT_APP_GET_ORDER_INTERNAL_URL=http://localhost:8080/nusas/store/internal/order/required/action
+REACT_APP_GET_SEARCH_ORDER_INTERNAL_URL=http://localhost:8080/nusas/store/internal/order/search
 REACT_APP_PATCH_TO_PROGRESS_ORDER_INTERNAL_URL=http://localhost:8080/nusas/store/internal/order/required/action/recieve
 REACT_APP_PATCH_TO_FINISHED_ORDER_INTERNAL_URL=http://localhost:8080/nusas/store/internal/order/required/action/finished
 REACT_APP_INPUT_CATEGORY_INTERNAL_URL=http://localhost:8080/nusas/store/internal/category
