--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.8.4",
     "cra-template": "1.2.0",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "lucide-react": "^0.482.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
@@ -17,6 +18,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0",
     "web-vitals": "^4.2.4"
   },
