progress pengembangan hari ke 171

--- a/.env
+++ b/.env
@@ -50,6 +50,7 @@ REACT_APP_GET_GENERAL_JOURNAL_DRAF_INTERNAL_URL=http://localhost:8080/nusas/stor
 REACT_APP_PUT_GENERAL_JOURNAL_UPDATE_AND_VOID_INTERNAL_URL=http://localhost:8080/nusas/store/internal/general/journal/update
 REACT_APP_GET_ASSETS_STORE_INTERNAL_URL=http://localhost:8080/nusas/store/internal/assets
 REACT_APP_GET_POST_DELETE_TABLE_INTERNAL_URL=http://localhost:8080/nusas/store/internal/table
+REACT_APP_CREATE_QR_ORDER_TYPE_TAKE_AWAY_INTERNAL_URL=http://localhost:8080/nusas/store/internal/table/takeaway
 REACT_APP_GET_PATCH_DATA_EMPLOYEE_INTERNAL_URL=http://localhost:8080/nusas/store/internal/data/employee
 REACT_APP_CHANGE_PASSWORD_INTERNAL_URL=http://localhost:8080/nusas/store/internal/change/password
  
